MH-4487 -- added version numbers to osgi imports and exports, and removed some redundencies in several of the poms.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7949 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-analysis-api/pom.xml
+++ b/modules/matterhorn-analysis-api/pom.xml
@@ -15,17 +15,17 @@
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-kernel</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-mpeg7</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-remote-api</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -46,8 +46,8 @@
         <extensions>true</extensions>
         <configuration>
           <instructions>
-            <Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
-            <Export-Package>org.opencastproject.analysis.api</Export-Package>
+            <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+            <Export-Package>org.opencastproject.analysis.api;version=${project.version}</Export-Package>
           </instructions>
         </configuration>
       </plugin>
