--- a/modules/matterhorn-analysis-remote/pom.xml
+++ b/modules/matterhorn-analysis-remote/pom.xml
@@ -18,7 +18,7 @@
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-analysis-api</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
 
     <!--  Thirdparty dependencies -->
@@ -79,9 +79,9 @@
         <extensions>true</extensions>
         <configuration>
           <instructions>
-            <Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
+            <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Export-Package>
-              org.opencastproject.analysis.remote
+              org.opencastproject.analysis.remote;version=${project.version}
             </Export-Package>
             <Import-Package>
               *;resolution:=optional
