--- a/modules/matterhorn-capture-admin-service-api/pom.xml
+++ b/modules/matterhorn-capture-admin-service-api/pom.xml
@@ -3,9 +3,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.opencastproject</groupId>
   <artifactId>matterhorn-capture-admin-service-api</artifactId>
-  <packaging>bundle</packaging>
   <name>matterhorn-capture-admin-service-api</name>
-  <version>1.1-SNAPSHOT</version>
+  <packaging>bundle</packaging>
   <parent>
     <groupId>org.opencastproject</groupId>
     <artifactId>base</artifactId>
@@ -27,8 +26,8 @@
         <extensions>true</extensions>
         <configuration>
           <instructions>
-            <Bundle-SymbolicName> ${pom.artifactId} </Bundle-SymbolicName>
-            <Export-Package> org.opencastproject.capture.admin.api </Export-Package>
+            <Bundle-SymbolicName> ${project.artifactId} </Bundle-SymbolicName>
+            <Export-Package> org.opencastproject.capture.admin.api;version=${project.version} </Export-Package>
           </instructions>
         </configuration>
       </plugin>
