--- a/modules/matterhorn-capture-agent-impl/pom.xml
+++ b/modules/matterhorn-capture-agent-impl/pom.xml
@@ -16,23 +16,22 @@
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-capture-agent-api</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-capture-admin-service-api</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-static</artifactId>
-      <version>1.1-SNAPSHOT</version>
-      <type>bundle</type>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-kernel</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.opencastproject.samples</groupId>
@@ -179,12 +178,12 @@
         <extensions>true</extensions>
         <configuration>
           <instructions>
-            <Bundle-SymbolicName> ${pom.artifactId} </Bundle-SymbolicName>
+            <Bundle-SymbolicName> ${project.artifactId} </Bundle-SymbolicName>
             <Import-Package>
-              org.opencastproject.capture.api.*,
-              org.opencastproject.mediapackage.*,
-              org.opencastproject.http,
-              org.opencastproject.fsresources,
+              org.opencastproject.capture.api.*;version=${project.version},
+              org.opencastproject.mediapackage.*;version=${project.version},
+              org.opencastproject.http;version=${project.version},
+              org.opencastproject.fsresources;version=${project.version},
               *;resolution:=optional
             </Import-Package>
             <Private-Package>
@@ -203,9 +202,9 @@
               ical4j;inline=true,
             </Embed-Dependency>
             <Export-Package>
-              org.opencastproject.capture.impl.*,
-              org.opencastproject.capture.pipeline.*,
-              org.opencastproject.capture.endpoint
+              org.opencastproject.capture.impl.*;version=${project.version},
+              org.opencastproject.capture.pipeline.*;version=${project.version},
+              org.opencastproject.capture.endpoint;version=${project.version}
             </Export-Package>
             <Service-Component>
               OSGI-INF/capture-service.xml,
