--- a/modules/matterhorn-composer-service-impl/pom.xml
+++ b/modules/matterhorn-composer-service-impl/pom.xml
@@ -14,22 +14,22 @@
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-composer-service-api</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-inspection-service-api</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-workspace-api</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-security-impl</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -96,7 +96,7 @@
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-remote-impl</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -115,15 +115,15 @@
         <extensions>true</extensions>
         <configuration>
           <instructions>
-            <Bundle-SymbolicName> ${pom.artifactId} </Bundle-SymbolicName>
+            <Bundle-SymbolicName> ${project.artifactId} </Bundle-SymbolicName>
             <Import-Package>
               org.osgi.service.component.*,
               org.apache.commons.httpclient.*,
-              org.opencastproject.mediapackage,
+              org.opencastproject.mediapackage;version=${project.version},
               *;resolution:=optional
             </Import-Package>
             <Private-Package> org.apache.xmlrpc.* </Private-Package>
-            <Export-Package>org.opencastproject.composer.impl.*</Export-Package>
+            <Export-Package>org.opencastproject.composer.impl.*;version=${project.version}</Export-Package>
             <Embed-Dependency>xmlrpc-client;inline=true</Embed-Dependency>
             <Service-Component>
               OSGI-INF/composer-service.xml,
