--- a/modules/matterhorn-distribution-service-api/pom.xml
+++ b/modules/matterhorn-distribution-service-api/pom.xml
@@ -15,7 +15,7 @@
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-kernel</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
   <build>
@@ -27,8 +27,8 @@
         <extensions>true</extensions>
         <configuration>
           <instructions>
-            <Bundle-SymbolicName> ${pom.artifactId} </Bundle-SymbolicName>
-            <Export-Package> org.opencastproject.distribution.api </Export-Package>
+            <Bundle-SymbolicName> ${project.artifactId} </Bundle-SymbolicName>
+            <Export-Package> org.opencastproject.distribution.api;version=${project.version} </Export-Package>
           </instructions>
         </configuration>
       </plugin>
