--- a/modules/matterhorn-distribution-service-itunesu/pom.xml
+++ b/modules/matterhorn-distribution-service-itunesu/pom.xml
@@ -5,7 +5,6 @@
   <artifactId>matterhorn-distribution-service-itunesu</artifactId>
   <packaging>bundle</packaging>
   <name>matterhorn-distribution-service-itunesu</name>
-  <version>1.1-SNAPSHOT</version>
   <parent>
     <groupId>org.opencastproject</groupId>
     <artifactId>base</artifactId>
@@ -15,17 +14,17 @@
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-distribution-service-api</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-workspace-api</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-remote-api</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
@@ -76,7 +75,7 @@
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-distribution-service-common</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
 
     <dependency>
@@ -96,7 +95,7 @@
         <extensions>true</extensions>
         <configuration>
           <instructions>
-            <Bundle-SymbolicName> ${pom.artifactId} </Bundle-SymbolicName>
+            <Bundle-SymbolicName> ${project.artifactId} </Bundle-SymbolicName>
             <Private-Package>
               org.opencastproject.deliver.actions,
               org.opencastproject.deliver.schedule,
@@ -106,8 +105,8 @@
               *;resolution:=optional
             </Import-Package>
             <Export-Package>
-              org.opencastproject.distribution.itunesu.*,
-              org.opencastproject.deliver.itunesu.*
+              org.opencastproject.distribution.itunesu.*;version=${project.version},
+              org.opencastproject.deliver.itunesu.*;version=${project.version}
             </Export-Package>
             <Embed-Dependency>
               matterhorn-distribution-service-common,
