--- a/modules/matterhorn-runtime-info-ui/pom.xml
+++ b/modules/matterhorn-runtime-info-ui/pom.xml
@@ -14,7 +14,7 @@
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-kernel</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -74,7 +74,7 @@
         <extensions>true</extensions>
         <configuration>
           <instructions>
-            <Bundle-SymbolicName> ${pom.artifactId} </Bundle-SymbolicName>
+            <Bundle-SymbolicName> ${project.artifactId} </Bundle-SymbolicName>
             <Private-Package>org.opencastproject.runtimeinfo,
               org.json.*, ui.*</Private-Package>
             <Embed-Dependency>*;scope=compile|runtime;inline=true</Embed-Dependency>
