--- a/modules/matterhorn-security-impl/pom.xml
+++ b/modules/matterhorn-security-impl/pom.xml
@@ -1,11 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.opencastproject</groupId>
   <artifactId>matterhorn-security-impl</artifactId>
-  <packaging>bundle</packaging>
   <name>matterhorn-security-impl</name>
-  <version>1.1-SNAPSHOT</version>
+  <packaging>bundle</packaging>
   <parent>
     <groupId>org.opencastproject</groupId>
     <artifactId>base</artifactId>
@@ -15,7 +13,7 @@
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-kernel</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.security</groupId>
@@ -91,7 +89,7 @@
         <extensions>true</extensions>
         <configuration>
           <instructions>
-            <Bundle-SymbolicName> ${pom.artifactId} </Bundle-SymbolicName>
+            <Bundle-SymbolicName> ${project.artifactId} </Bundle-SymbolicName>
             <Import-Package>
               javax.servlet,
               org.jasig.cas.client.authentication;resolution:=optional,
@@ -118,7 +116,7 @@
               org.springframework.security.web.authentication.www,
               *;resolution:=optional
             </Import-Package>
-            <Export-Package> org.opencastproject.security </Export-Package>
+            <Export-Package> org.opencastproject.security;${project.version} </Export-Package>
             <Service-Component>
               OSGI-INF/http-client.xml,
               OSGI-INF/security-config-scanner.xml
