--- a/modules/matterhorn-static/pom.xml
+++ b/modules/matterhorn-static/pom.xml
@@ -5,7 +5,6 @@
   <artifactId>matterhorn-static</artifactId>
   <packaging>bundle</packaging>
   <name>matterhorn-static</name>
-  <version>1.1-SNAPSHOT</version>
   <parent>
     <groupId>org.opencastproject</groupId>
     <artifactId>base</artifactId>
@@ -56,9 +55,9 @@
         <extensions>true</extensions>
         <configuration>
           <instructions>
-            <Bundle-SymbolicName> ${pom.artifactId} </Bundle-SymbolicName>
+            <Bundle-SymbolicName> ${project.artifactId} </Bundle-SymbolicName>
             <Export-Package>
-              org.opencastproject.fsresources
+              org.opencastproject.fsresources;version=${project.version}
             </Export-Package>
             <Service-Component>
               OSGI-INF/static.xml
