--- a/modules/matterhorn-workflow-service-impl/pom.xml
+++ b/modules/matterhorn-workflow-service-impl/pom.xml
@@ -1,11 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.opencastproject</groupId>
   <artifactId>matterhorn-workflow-service-impl</artifactId>
-  <packaging>bundle</packaging>
   <name>matterhorn-workflow-service-impl</name>
-  <version>1.1-SNAPSHOT</version>
+  <packaging>bundle</packaging>
   <parent>
     <groupId>org.opencastproject</groupId>
     <artifactId>base</artifactId>
@@ -15,17 +13,17 @@
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-workflow-service-api</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-dublincore</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-workspace-api</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
@@ -97,18 +95,18 @@
         <extensions>true</extensions>
         <configuration>
           <instructions>
-            <Bundle-SymbolicName> ${pom.artifactId} </Bundle-SymbolicName>
+            <Bundle-SymbolicName> ${project.artifactId} </Bundle-SymbolicName>
             <Import-Package>
               javax.sql.*,
               org.apache.lucene.*,
-              org.opencastproject.workflow.api,
-              org.opencastproject.http,
-              org.opencastproject.mediapackage,
+              org.opencastproject.workflow.api;version=${project.version},
+              org.opencastproject.http;version=${project.version},
+              org.opencastproject.mediapackage;version=${project.version},
               *;resolution:=optional
             </Import-Package>
             <Export-Package>
-              org.opencastproject.workflow.impl,
-              org.opencastproject.workflow.endpoint
+              org.opencastproject.workflow.impl;version=${project.version},
+              org.opencastproject.workflow.endpoint;version=${project.version}
             </Export-Package>
             <Private-Package>
               org.json.simple,
